syntax = "proto3";

package pbconfig;

// 世界服务器配置
message WorldConfig {

	// 资源模块
	message ResourceModule {
	}

	// 逻辑模块
	message LogicModule {
		uint32 work_thread_num = 1; // 工作线程数量
	}

	// 数据库模块
	message DatabaseModule {
		string host = 1; // 数据库地址
		string username = 2; // 账号
		string password = 3; // 密码
		string dbname = 4; // 数据库名称

		string redis_host = 5; // 数据库地址
		string redis_username = 6; // 账号
		string redis_password = 7; // 密码
		string redis_dbname = 8; // 数据库名称
	}

	// 网络模块
	message NetworkModule {
		string from_gws_listen_addr = 1; // 监听GatewayServer的ip:port
		uint32 from_gws_thread_num = 2; // 线程数
		uint32 from_gws_session_num = 3; // 预计连接数

		string from_gs_listen_addr = 4; // 监听GameServer的ip:port
		uint32 from_gs_thread_num = 5; // 线程数
		uint32 from_gs_session_num = 6; // 预计连接数

		string to_sdk_remote_addr = 7; // 连接SdkServer的ip:port
		uint32 to_sdk_thread_num = 8; // 线程数
		uint32 to_sdk_session_num = 9; // 预计连接数
	}

	LogicModule logicModule = 1; // 逻辑模块
	DatabaseModule databaseModule = 2; // 数据库模块
	NetworkModule networkModule = 3; // 网络模块
}
